<resources>
    <string name="app_name">castX</string>

    <string name="accessibility_service_label">castX</string>
    <string name="accessibility_service_description">castX</string>
    <string name="url"> Url:</string>
    <string name="passwordlabel"> Password:</string>
    <string name="passwordhint"> Please enter your password..</string>
    <string name="startScreenMirroring">Start Screen Mirroring</string>
    <string name="startScrcpyClient">Start the scrcpy client</string>
    <string name="stopScrcpyClient">Stop the scrcpy client</string>
    <string name="openNative">View</string>
    <string name="openBrowser">Browser View</string>



    <string name="castxServer">Castx Server</string>
    <string name="scrcpyClient">Scrcpy Client</string>
    <string name="castxClient">Castx Client</string>
    <string name="stopScreenMirroring">Stop Screen Mirroring</string>
    <string name="stopScreenMirroringMsg"> Screen casting has stopped</string>
    <string name="scrcpyNotStarted">Scrcpy client not started</string>
    <string name="chromeNoInstall">You don\'t have Edge or Chrome installed so you can\'t use it</string>
    <string name="scrcpyurl">Scrcpy Url:</string>
    <string name="urlErrMsg">Screencast URL error</string>
    <string name="port">port</string>
    <string name="connect">Adb connect</string>
    <string name="pair">Adb Pair</string>
    <string name="pairCode">Pairing code</string>
    <string name="pairHint">6 digits</string>
    <string name="pairMsg">You need to start before pairing</string>
    <string name="connectAdbMsg">You need to start it before you can connect to adb</string>
    <string name="usbConnect">connect device</string>

    <string name="castxTab">Castx</string>
    <string name="scrcpyTab">Scrcpy</string>

    <string name="scrcpyStartMsg">Scrcpy reception requires the scrcpy service to be started first</string>
    <string name="connectUsbErr">USB authorization is required to run</string>
    <string name="connectUsbErr1">The usb device is occupied</string>
    <string name="connectUsbErr2">Unsupported USB device</string>
</resources>