<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <!-- 主内容区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/tab_top"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"

                    android:orientation="horizontal"
                    android:background="#EFEFEF">

                    <RadioButton
                        android:id="@+id/castx_client"
                        style="@style/TabButtonStyle"
                        android:checked="true"
                        android:textColor="@color/tab_text_selector"
                        android:background="@drawable/tab_background_selector"
                        android:textSize="16sp"
                        android:text="@string/castxTab" />

                    <RadioButton
                        android:id="@+id/scrcpy_client"
                        style="@style/TabButtonStyle"
                        android:textColor="@color/tab_text_selector"
                        android:background="@drawable/tab_background_selector"
                        android:textSize="16sp"
                        android:text="@string/scrcpyTab" />


                </RadioGroup>


        <!-- 其他UI元素 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >


            <ImageButton
                android:id="@+id/backMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/arrow_back_24px"
                />

            <ImageButton
                android:id="@+id/play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/play_circle_24px"
                />
            <ImageButton
                android:id="@+id/btn_expand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:src="@drawable/fullscreen_24px"
                />

        </LinearLayout>



        <fragment
            android:id="@+id/adb_connect"
            android:name="com.dosgo.castx.AdbConnectFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/url"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textSize="18sp"
                android:text=""
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/passwordve"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/passwordlabel"
                android:singleLine="true"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:layout_weight="1"
                android:singleLine="true"
                android:hint="@string/passwordhint"
                android:imeOptions="actionDone"/>
        </LinearLayout>


        <!-- 小窗播放器容器 -->
        <FrameLayout
            android:id="@+id/mini_player_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#33000000">

            <org.webrtc.SurfaceViewRenderer
                android:id="@+id/remote_video_view"
                android:layout_width="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"/>

        </FrameLayout>

    </LinearLayout>

    <!-- 全屏时的播放器（初始隐藏） -->
    <include
        layout="@layout/full_player"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>